# sqlite-memory-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  VERSION.md  bootstrap.py  docker-compose.yml  manage.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_runner.py
backend/: __init__.py  base_backend.py  logging_util.py  policy.py  sqlite_backend.py
config/: settings.env  settings.env.example
config/docs/: 00-overview.md  04-usage.md  05-security-backups.md
scripts/: apply_migrations.py  backup_safe.py  deploy_init.py  install_sqlite_and_mcp.sh  register_project_scope.sh  register_user_scope.sh  setup_venv.sh  smoke_test.py
sql/: bootstrap.sql  schema.sql
sql/migrations/: 002_2_3_quick_wins.sql  003_2_4_dynamic_tiering.sql  004_2_5_dynamic_tier_trigger.sql  005_2_6_relationship_indexes.sql
templates/: .mcp.json.sample  mcp_tools.py  settings.user.sample.json
tests/: conftest.py  test_access_tracking.py  test_agent_table_quota.py  test_backend_enhancements.py  test_decay_and_tiers.py  test_distribution_build.py  test_ops_scripts.py  test_policy_relationships.py  test_read_only_mode.py  test_relationship_success.py  test_retention_cleanup.py
